--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "start": "node dist/index.ts",
+    "start": "build  node dist/index.ts",
     "dev": "ts-node-dev src/index.ts",
     "build": "tsc",
     "prod": "node dist/index.js"
