--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "start": "start npm run build && node dist/index.js",
-    "dev": "ts-node-dev src/index.ts",
-    "build": "tsc",
-    "prod": "node dist/index.js"
+    "start": "ts-node src/index.ts",
+    "dev": "ts-node-dev src/index.ts"
   },
   "keywords": [],
   "author": "Luisbvi",
@@ -18,13 +16,15 @@
     "discord.js": "^14.6.0",
     "dotenv": "^16.0.3",
     "glob": "7.2.0",
-    "mongoose": "^6.7.5"
+    "mongoose": "^6.7.5",
+    "tslib": "^2.4.1",
+    "wait-on": "^6.0.1"
   },
   "devDependencies": {
     "@types/glob": "7.2.0",
     "@types/node": "^18.11.8",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.8.4"
+    "typescript": "4.7.4"
   }
 }
