--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "discord.js": "^14.6.0",
     "dotenv": "^16.0.3",
     "glob": "7.2.0",
-    "mongoose": "^6.7.5",
-    "tslib": "^2.4.1",
-    "wait-on": "^6.0.1"
+    "mongoose": "^6.7.5"
   },
   "devDependencies": {
     "@types/glob": "7.2.0",
